test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-borrowed-from-oknil-shared.good
init-field-dflt-nonnil-borrowed-from-oknil-shared.chpl:8: error: Cannot initialize 'lhs' of type 'borrowed MyClass' from a 'shared MyClass?'
init-field-dflt-nonnil-borrowed-from-oknil-shared.chpl:13: error: done
